--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.5.2"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "eslint --cache --fix",
+    "src/**/*": "prettier --write --ignore-unknown"
   }
 }
